--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,8 @@
   color: #fff !important;
   background: var(--primary);
   border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 @media (max-width: 991.98px) {
@@ -495,28 +497,6 @@
   height: 50px!important;
 }
 
-@media (max-width: 412px) {
-  img.responsive {
-      width: 100% !important;
-      height: 200px;
-  }
-}
-
-/* Styles for medium screens */
-@media (min-width: 601px) and (max-width: 1024px) {
-  img.responsive {
-      width: 80%;
-      height: 400px;
-  }
-}
-
-/* Styles for large screens */
-@media (min-width: 1025px) {
-  img.responsive {
-      width: 60%;
-      height: 600px;
-  }
-}
 .page-header{
   background-color: var(--primary) !important;
 }
