--- a/css/style.css
+++ b/css/style.css
@@ -443,11 +443,11 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: var(--lprimary)!important;
+  background-color: var(--lprimary) !important;
 }
 .calculator-screen-wrapper {
   border: 1px solid #ced4da;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   margin-bottom: 10px;
   overflow: hidden;
   background-color: #e9ecef;
@@ -480,7 +480,8 @@
 .btn-success {
   border-radius: 0.25rem;
 }
-.btn-warning, .btn-success {
+.btn-warning,
+.btn-success {
   color: white;
   background-color: rgba(0, 122, 179, 0.459);
   border-color: var(--transparent);
@@ -489,14 +490,129 @@
   background-color: rgba(255, 0, 0, 0.532);
   border-color: var(--transparent);
 }
-.btn-light{
+.btn-light {
   background-color: var(--transparent);
   border-color: var(--transparent);
 }
-.btn-success{
-  height: 50px!important;
+.btn-success {
+  height: 50px !important;
 }
 
-.page-header{
+.page-header {
   background-color: var(--primary) !important;
 }
+
+/* Navigation Start */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+@media (min-width: 992px) {
+  .navigation {
+    display: none;
+    /* Hide navigation on large screens and above */
+  }
+}
+
+@media (max-width: 950px) {
+  .navbar {
+    display: none;
+    /* Hide navbar on small screens and below */
+  }
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.custom-shadow {
+  box-shadow: 0px 10px 20px rgba(0.644, 0.644, 0.644, 0.644); /* Adjust the blur radius and color opacity as needed */
+}
+
+
+
+.navigation {
+  position: fixed;
+  width: auto;
+  height: 88px;
+  background: linear-gradient(180deg, #a5cacf, #ffffff);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.navigation ul {
+  display: flex;
+  width: 350px;
+}
+
+.navigation ul li {
+  position: relative;
+  width: 58px;
+  height: 58px;
+  list-style: none;
+  z-index: 1;
+}
+
+.navigation ul li a {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+}
+
+.navigation ul li a .icon {
+  position: relative;
+  display: block;
+  line-height: 90px;
+  font-size: 1.5em;
+  text-align: center;
+  color: #0a657a;
+  transition: 0.5s;
+}
+
+.navigation ul li.active a .icon {
+  transform: translateY(-15px);
+}
+
+.navigation ul li a .text {
+  position: absolute;
+  color: #000;
+  font-weight: 900;
+  font-size: 0.8em;
+  letter-spacing: 0.05em;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: 0.5s;
+}
+
+.navigation ul li.active a .text {
+  opacity: 1;
+  transform: translateY(20px);
+}
+
+.navigation ul li a .circle {
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  border-radius: 50%;
+  border: 3px solid #000;
+  transform: translateY(-37px) scale(0);
+}
+
+.navigation ul li.active a .circle {
+  transition: 0.5s;
+  transition-delay: 1s;
+  transform: translateY(-18.5px) scale(1);
+}
+
+/* Navigation End */
