--- a/css/style.css
+++ b/css/style.css
@@ -437,8 +437,19 @@
   background-color: rgb(83, 83, 83);
 }
 
-/*** Educational Cards ***/
+@media (max-width: 768px) {
+  .carousel-inner .carousel-item {
+      height: 250px; 
+  }
 
+  .carousel-inner .carousel-item img {
+      height: 100%;
+      object-fit: cover;
+  }
+}
+
+
+/*** Educational Cards ***/
 .custom-card-container {
   display: flex;
   flex-wrap: wrap;
@@ -490,9 +501,9 @@
 
 @media (max-width: 576px) {
   .custom-card-item {
-      flex: 1 1 calc(100%);
+      flex: 1 1 calc(100% - 0px);
       /* 1 card per row on very small screens */
-      max-width: calc(100%);
+      max-width: calc(100% - 0px);
       /* Ensure cards do not exceed the width */
   }
 }
