new loader added

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,109 @@
   opacity: 1;
 }
 
+.loader {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  position: relative;
+  transform: rotate(45deg);
+}
+
+.loader::before {
+  content: "";
+  box-sizing: border-box;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: 0;
+  top: -24px;
+  animation: animloader 4s ease infinite;
+}
+
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+  background: rgba(0, 104, 120, 0.85);
+  /* Updated background color */
+  box-shadow: 0 0 10px rgba(0, 104, 120, 0.15);
+  /* Updated shadow color */
+  animation: animloader2 2s ease infinite;
+}
+
+@keyframes animloader {
+  0% {
+    box-shadow: 0 24px rgba(0, 104, 120, 0), 24px 24px rgba(0, 104, 120, 0),
+      24px 48px rgba(0, 104, 120, 0), 0px 48px rgba(0, 104, 120, 0);
+  }
+
+  12% {
+    box-shadow: 0 24px #006878, 24px 24px rgba(0, 104, 120, 0),
+      24px 48px rgba(0, 104, 120, 0), 0px 48px rgba(0, 104, 120, 0);
+  }
+
+  25% {
+    box-shadow: 0 24px #006878, 24px 24px #006878,
+      24px 48px rgba(0, 104, 120, 0), 0px 48px rgba(0, 104, 120, 0);
+  }
+
+  37% {
+    box-shadow: 0 24px #006878, 24px 24px #006878, 24px 48px #006878,
+      0px 48px rgba(0, 104, 120, 0);
+  }
+
+  50% {
+    box-shadow: 0 24px #006878, 24px 24px #006878, 24px 48px #006878,
+      0px 48px #006878;
+  }
+
+  62% {
+    box-shadow: 0 24px rgba(0, 104, 120, 0), 24px 24px #006878,
+      24px 48px #006878, 0px 48px #006878;
+  }
+
+  75% {
+    box-shadow: 0 24px rgba(0, 104, 120, 0), 24px 24px rgba(0, 104, 120, 0),
+      24px 48px #006878, 0px 48px #006878;
+  }
+
+  87% {
+    box-shadow: 0 24px rgba(0, 104, 120, 0), 24px 24px rgba(0, 104, 120, 0),
+      24px 48px rgba(0, 104, 120, 0), 0px 48px #006878;
+  }
+
+  100% {
+    box-shadow: 0 24px rgba(0, 104, 120, 0), 24px 24px rgba(0, 104, 120, 0),
+      24px 48px rgba(0, 104, 120, 0), 0px 48px rgba(0, 104, 120, 0);
+  }
+}
+
+@keyframes animloader2 {
+  0% {
+    transform: translate(0, 0) rotateX(0) rotateY(0);
+  }
+
+  25% {
+    transform: translate(100%, 0) rotateX(0) rotateY(180deg);
+  }
+
+  50% {
+    transform: translate(100%, 100%) rotateX(-180deg) rotateY(180deg);
+  }
+
+  75% {
+    transform: translate(0, 100%) rotateX(-180deg) rotateY(360deg);
+  }
+
+  100% {
+    transform: translate(0, 0) rotateX(0) rotateY(360deg);
+  }
+}
+
 /*** Button ***/
 .btn {
   font-family: "Nunito", sans-serif;
@@ -439,15 +542,14 @@
 
 @media (max-width: 768px) {
   .carousel-inner .carousel-item {
-      height: 250px; 
+    height: 250px;
   }
 
   .carousel-inner .carousel-item img {
-      height: 100%;
-      object-fit: cover;
+    height: 100%;
+    object-fit: cover;
   }
 }
-
 
 /*** Educational Cards ***/
 .custom-card-container {
@@ -492,19 +594,19 @@
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .custom-card-item {
-      flex: 1 1 calc(50% - 20px);
-      /* 2 cards per row on tablets and mobile devices */
-      max-width: calc(50% - 20px);
-      /* Ensure cards do not exceed the width */
+    flex: 1 1 calc(50% - 20px);
+    /* 2 cards per row on tablets and mobile devices */
+    max-width: calc(50% - 20px);
+    /* Ensure cards do not exceed the width */
   }
 }
 
 @media (max-width: 576px) {
   .custom-card-item {
-      flex: 1 1 calc(100% - 0px);
-      /* 1 card per row on very small screens */
-      max-width: calc(100% - 0px);
-      /* Ensure cards do not exceed the width */
+    flex: 1 1 calc(100% - 0px);
+    /* 1 card per row on very small screens */
+    max-width: calc(100% - 0px);
+    /* Ensure cards do not exceed the width */
   }
 }
 
